# dotfiles

./: .gitignore  .rubocop.yml  Gemfile  PLAN.md  README.md  backup.sh  dependencies-install.sh  flake.nix  gemset.nix  hashes.nix  install.sh  setup-home-server.sh  setup-server.sh
.claude/: settings.local.json
.github/workflows/: release.yml
PLAN/: 00_rust_project_scaffold.md  01_domain_models.md  02_database_layer.md  03_cli_commands.md  04_cli_output_formats.md  05_tui_functional_core.md  06_tui_rendering.md  07_agent_worktree_skill.md  08_agent_progress_skill.md  09_plan_author_handle.md  10_plan_skill_integrations.md  11_memory_skill_update.md  12_agents_md_registration.md  agent-guide.md  inventory.md
lazyvim/: init.lua  lazy-lock.json
lib/: dependencies_helpers.sh  helpers.sh  rc_helpers.sh
llm/: AGENTS.md  CLAUDE.md  README.md
llm/extensions/: modal-editor.ts
pi/: README.md
pi/code-review/: package.json
plans/env-to-nix/: README.md  phase-0-bootstrap.md
proj/nix/: PUNCHLIST.md  SPEC.md
rc/asdf/: fish_config
rc/aspell/: dictionary.txt
rc/bash/: bash_profile
rc/claude/: notify.sh  settings.json
rc/claude-skills/: tdd-planning.md
rc/fish/: config  dev_config  home_mac_config  mac_config  (+2 more)
rust/: Cargo.toml
rust/agent-progress/: Cargo.toml  install.sh
rust/agent-progress/.cargo/: config.toml
rust/agent-progress/src/: cli.rs  domain.rs  main.rs  tui.rs
rust/agent-progress/src/db/: mod.rs  ops.rs  schema.rs
rust/agent-progress/src/domain/: format.rs  mod.rs
rust/agent-progress/src/tui/: app.rs  mod.rs  render.rs  state.rs
(+83 files in other folders)
