[package]
name = "agent-progress"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "agent-progress"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"
